--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-date-range": "^1.4.0",
     "react-dom": "17.0.2",
+    "react-image-gallery": "^1.2.7",
     "react-map-gl": "^6.1.19",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
@@ -25,6 +26,7 @@
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "postcss": "^8.4.5",
+    "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.16"
   }
 }
